k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: react
spec:
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
