k8s/virtualservice-v1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: react-vs
  namespace: react
spec:
  hosts:
  - "*"
  gateways:
  - react-gateway
  http:
  - route:
    - destination:
        host: react-frontend
        port:
          number: 80
      weight: 100
