k8s/virtualservice-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: react-vs-v2
  namespace: react
spec:
  hosts:
  - "react.example.com"
  gateways:
  - react-gateway
  http:
  - route:
    - destination:
        host: react-frontend
        subset: v1
      weight: 90
    - destination:
        host: react-frontend
        subset: v2
      weight: 10
